--- a/src/Pages/New/index.scss
+++ b/src/Pages/New/index.scss
@@ -1,15 +1,29 @@
+body {
+  display: flex;
+  /* 使用 flexbox */
+  justify-content: center;
+  /* 水平居中 */
+  align-items: center;
+  /* 垂直居中 */
+}
+
 .keepAccounts {
+  width: 375px;
+  /* 宽度375px */
+
   --ka-bg-color: #daf2e1;
   --ka-color: #69ae78;
   --ka-border-color: #191d26;
 
-  height: 100%;
+  height: 675px;
+  //border: 1px solid;
   background-color: var(--ka-bg-color);
 
   .nav {
     --adm-font-size-10: 16px;
     color: #121826;
     background-color: transparent;
+
     &::after {
       height: 0;
     }
@@ -33,6 +47,7 @@
           margin-right: 10px;
         }
       }
+
       .selected {
         color: #fff;
         --background-color: var(--ka-border-color);
@@ -63,6 +78,7 @@
             margin-right: 6px;
             font-size: 17px;
           }
+
           .text {
             font-size: 16px;
           }
@@ -90,19 +106,23 @@
     }
   }
 
-  .container {
-  }
+  .container {}
+
   .kaTypeList {
-    height: 490px;
-    padding: 20px 11px;
+    height: 480px;
+    padding: 20px 12px;
     padding-bottom: 70px;
     overflow-y: scroll;
     background: #ffffff;
     border-radius: 20px 20px 0 0;
-    -ms-overflow-style: none; /* Internet Explorer 10+ */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+
+    /* Firefox */
     &::-webkit-scrollbar {
-      display: none; /* Safari and Chrome */
+      display: none;
+      /* Safari and Chrome */
     }
 
     .kaType {
@@ -116,6 +136,7 @@
         font-size: 13px;
         color: #808080;
       }
+
       .list {
         display: flex;
 
@@ -126,6 +147,7 @@
           margin-right: 7px;
           text-align: center;
           border: 0.5px solid #fff;
+
           &:last-child {
             margin-right: 0;
           }
@@ -137,6 +159,7 @@
             font-size: 25px;
           }
         }
+
         .item.selected {
           border: 0.5px solid var(--ka-border-color);
           border-radius: 5px;
@@ -147,23 +170,29 @@
   }
 
   .btns {
-    position: fixed;
-    bottom: 15px;
+    position: relative;
+    display: flex;
+    /* 使用 flexbox */
+    justify-content: center;
+    bottom: 175px;
+
     width: 100%;
     text-align: center;
 
     .btn {
-    width: 200px;
-    --border-width: 0;
-    --background-color: #fafafa;
-    --text-color: #616161;
-    &:first-child {
-    margin-right: 15px;
+      width: 200px;
+      --border-width: 0;
+      --background-color: #fafafa;
+      --text-color: #616161;
+
+      &:first-child {
+        margin-right: 15px;
+      }
     }
-    }
+
     .btn.save {
-    --background-color: var(--ka-bg-color);
-    --text-color: var(--ka-color);
-    }
+      --background-color: var(--ka-bg-color);
+      --text-color: var(--ka-color);
     }
   }
+}
